fix: removed static keyword from copyfile method in AiLearningToolApplication.java and instead recreated copy file method for the unit test